--- a/Homework 5/HW5.ipynb
+++ b/Homework 5/HW5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1404,
+   "execution_count": 1461,
    "id": "a85dd9bb",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "from matplotlib.colors import ListedColormap\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch import optim"
+    "from torch import optim\n",
+    "import timer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1405,
+   "execution_count": 1462,
    "id": "ea8f0f52",
    "metadata": {},
    "outputs": [
@@ -27,7 +28,7 @@
        "'1.10.2'"
       ]
      },
-     "execution_count": 1405,
+     "execution_count": 1462,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1406,
+   "execution_count": 1463,
    "id": "01ae0123",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1407,
+   "execution_count": 1464,
    "id": "ddc4194e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1408,
+   "execution_count": 1465,
    "id": "8794c220",
    "metadata": {},
    "outputs": [],
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1409,
+   "execution_count": 1466,
    "id": "5ba8a8cc",
    "metadata": {},
    "outputs": [],
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1410,
+   "execution_count": 1467,
    "id": "7c7d98ed",
    "metadata": {},
    "outputs": [],
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1411,
+   "execution_count": 1468,
    "id": "ce504611",
    "metadata": {},
    "outputs": [],
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1412,
+   "execution_count": 1469,
    "id": "668a1578",
    "metadata": {},
    "outputs": [],
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1413,
+   "execution_count": 1470,
    "id": "79ab20bc",
    "metadata": {},
    "outputs": [],
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1414,
+   "execution_count": 1471,
    "id": "3edc1968",
    "metadata": {},
    "outputs": [],
@@ -193,10 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1415,
+   "execution_count": 1472,
    "id": "976bfd1c",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -221,7 +222,7 @@
        "tensor([nan, nan, nan])"
       ]
      },
-     "execution_count": 1415,
+     "execution_count": 1472,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1416,
+   "execution_count": 1473,
    "id": "6aaaf5cc",
    "metadata": {},
    "outputs": [
@@ -258,7 +259,7 @@
        "tensor([ 0.8937,  0.8937, -1.8435])"
       ]
      },
-     "execution_count": 1416,
+     "execution_count": 1473,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1417,
+   "execution_count": 1474,
    "id": "b888560f",
    "metadata": {},
    "outputs": [
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1418,
+   "execution_count": 1475,
    "id": "a9ace2f7",
    "metadata": {},
    "outputs": [
@@ -322,7 +323,7 @@
        "tensor([ 1.2221,  1.2221, -0.8447])"
       ]
      },
-     "execution_count": 1418,
+     "execution_count": 1475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,8 +334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1419,
-   "id": "37bedd6d",
+   "execution_count": 1476,
+   "id": "76677701",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +360,7 @@
        "tensor([ 1.7575,  1.7575, -6.9728])"
       ]
      },
-     "execution_count": 1419,
+     "execution_count": 1476,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,17 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1420,
+   "execution_count": 1477,
    "id": "91d5eeb2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x26ae1e23fa0>]"
+       "[<matplotlib.lines.Line2D at 0x26b029ed0a0>]"
       ]
      },
-     "execution_count": 1420,
+     "execution_count": 1477,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1421,
+   "execution_count": 1478,
    "id": "1f547b05",
    "metadata": {},
    "outputs": [],
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1422,
+   "execution_count": 1479,
    "id": "9ab83a7a",
    "metadata": {},
    "outputs": [
@@ -469,7 +470,7 @@
        "torch.Size([436, 1])"
       ]
      },
-     "execution_count": 1422,
+     "execution_count": 1479,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1423,
+   "execution_count": 1480,
    "id": "5c53dec1",
    "metadata": {},
    "outputs": [],
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1424,
+   "execution_count": 1481,
    "id": "dd1c2851",
    "metadata": {},
    "outputs": [],
@@ -546,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1425,
-   "id": "5832dd1c",
+   "execution_count": 1482,
+   "id": "45df0766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,24 +561,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1426,
-   "id": "ddf2f919",
+   "execution_count": 1483,
+   "id": "c085ff5f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 1000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 1500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 2000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 2500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 3000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 3500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 4000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 4500, Training loss 258561212416.0000, Validation loss 273989795840.0000\n",
-      "Epoch 5000, Training loss 258561212416.0000, Validation loss 273989795840.0000\n"
+      "LR = 1e-1\n",
+      "Epoch 500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 5000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "LR = 1e-2\n",
+      "Epoch 500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 5000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "LR = 1e-3\n",
+      "Epoch 500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 5000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "LR = 1e-4\n",
+      "Epoch 500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 1500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 2500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 3500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 4500, Training loss 264991113216.0000, Validation loss 248270438400.0000\n",
+      "Epoch 5000, Training loss 264991113216.0000, Validation loss 248270438400.0000\n"
      ]
     },
     {
@@ -586,7 +621,7 @@
        "tensor([1., 1., 1., 1., 1., 0.], requires_grad=True)"
       ]
      },
-     "execution_count": 1426,
+     "execution_count": 1483,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,14 +629,54 @@
    "source": [
     "linear_model = nn.Linear(5,1)\n",
     "\n",
+    "\n",
+    "\n",
+    "params = torch.tensor([1.0, 1.0, 1.0, 1.0, 1.0, 0.0], requires_grad=True)\n",
+    "\n",
+    "optimizer = optim.SGD(\n",
+    "    linear_model.parameters(),\n",
+    "    lr = 1e-1)\n",
+    "\n",
+    "print('LR = 1e-1')\n",
+    "training_loop2(n_epochs = 5000, \n",
+    "              optimizer = optimizer, \n",
+    "              params = params, \n",
+    "              train_t_u = train_t_un, \n",
+    "              val_t_u = val_t_un, \n",
+    "              train_t_c = train_t_c, \n",
+    "              val_t_c = val_t_c )\n",
+    "\n",
+    "optimizer = optim.SGD(\n",
+    "    linear_model.parameters(),\n",
+    "    lr = 1e-2)\n",
+    "\n",
+    "print('LR = 1e-2')\n",
+    "training_loop2(n_epochs = 5000, \n",
+    "              optimizer = optimizer, \n",
+    "              params = params, \n",
+    "              train_t_u = train_t_un, \n",
+    "              val_t_u = val_t_un, \n",
+    "              train_t_c = train_t_c, \n",
+    "              val_t_c = val_t_c )\n",
+    "\n",
+    "optimizer = optim.SGD(\n",
+    "    linear_model.parameters(),\n",
+    "    lr = 1e-3)\n",
+    "\n",
+    "print('LR = 1e-3')\n",
+    "training_loop2(n_epochs = 5000, \n",
+    "              optimizer = optimizer, \n",
+    "              params = params, \n",
+    "              train_t_u = train_t_un, \n",
+    "              val_t_u = val_t_un, \n",
+    "              train_t_c = train_t_c, \n",
+    "              val_t_c = val_t_c )\n",
+    "\n",
     "optimizer = optim.SGD(\n",
     "    linear_model.parameters(),\n",
     "    lr = 1e-4)\n",
     "\n",
-    "\n",
-    "\n",
-    "params = torch.tensor([1.0, 1.0, 1.0, 1.0, 1.0, 0.0], requires_grad=True)\n",
-    "#optimizer = optim.SGD([params], lr = learning_rate)\n",
+    "print('LR = 1e-4')\n",
     "training_loop2(n_epochs = 5000, \n",
     "              optimizer = optimizer, \n",
     "              params = params, \n",
@@ -626,12 +701,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1427,
-   "id": "3028a94d",
+   "execution_count": 1486,
+   "id": "be405c27",
    "metadata": {},
    "outputs": [],
    "source": [
     "def training_loop3(n_epochs, optimizer, model, loss_fn, t_u_train, t_u_val, t_c_train, t_c_val):\n",
+    "\n",
     "    for epoch in range(1,n_epochs +1):\n",
     "        t_p_train = model(t_u_train)\n",
     "        loss_train = loss_fn(t_p_train.float(), t_c_train.float())\n",
@@ -650,18 +726,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1428,
-   "id": "1c38068e",
+   "execution_count": 1487,
+   "id": "890242d4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1, Training loss 259047407616.0000, Validation loss 274502385664.000000\n",
-      "Epoch 50, Training loss 255251103744.0000, Validation loss 270576795648.000000\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -676,9 +744,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 100, Training loss 251319549952.0000, Validation loss 266510221312.000000\n",
-      "Epoch 150, Training loss 247458152448.0000, Validation loss 262515015680.000000\n",
-      "Epoch 200, Training loss 243665666048.0000, Validation loss 258589851648.000000\n"
+      "Epoch 1, Training loss 265483091968.0000, Validation loss 248758386688.000000\n",
+      "Epoch 50, Training loss 261563367424.0000, Validation loss 244914536448.000000\n",
+      "Epoch 100, Training loss 257548156928.0000, Validation loss 240977772544.000000\n",
+      "Epoch 150, Training loss 253604626432.0000, Validation loss 237111951360.000000\n",
+      "Epoch 200, Training loss 249731399680.0000, Validation loss 233315794944.000000\n"
      ]
     }
    ],
@@ -715,19 +785,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1429,
-   "id": "9bebb484",
+   "execution_count": 1488,
+   "id": "9fb009d6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
-      "Epoch 50, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
-      "Epoch 100, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
-      "Epoch 150, Training loss 259047686144.0000, Validation loss 274502696960.000000\n",
-      "Epoch 200, Training loss 259047686144.0000, Validation loss 274502696960.000000\n"
+      "Epoch 1, Training loss 265483370496.0000, Validation loss 248758648832.000000\n",
+      "Epoch 50, Training loss 265483370496.0000, Validation loss 248758648832.000000\n",
+      "Epoch 100, Training loss 265483370496.0000, Validation loss 248758648832.000000\n",
+      "Epoch 150, Training loss 265483370496.0000, Validation loss 248758648832.000000\n",
+      "Epoch 200, Training loss 265483370496.0000, Validation loss 248758648832.000000\n"
      ]
     }
    ],
@@ -757,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7769af0",
+   "id": "6783f244",
    "metadata": {},
    "outputs": [],
    "source": []
